# aios

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: config.yaml  config_cwi.yaml
agents/prompts/: architect.md  ceo.md  dev.md  devops.md  diagram.md  marketing.md  pm.md  qa.md  spec.md
agents/prompts_cwi/: agile_coach.md  executive_reporting.md  meeting_secretary.md  pmo.md  presentation.md  product.md
config/: projects.yaml
n8n_workflows/: cwi_digest_diario.json  cwi_pmo_semanal.json  expansao_ceo_semanal.json
orchestrator/: __init__.py  api.py  base_agent.py  cli.py  dashboard_api.py  importador.py  mcp_server.py  pipeline.py  pipeline_cwi.py  settings.py  watcher.py  youtube_api.py
orchestrator/agents/: architect_agent.py  ceo_agent.py  dev_agent.py  devops_agent.py  diagram_agent.py  marketing_agent.py  pm_agent.py  qa_agent.py  spec_agent.py
orchestrator/agents_cwi/: agile_coach_agent.py  executive_reporting_agent.py  meeting_secretary_agent.py  pmo_agent.py  presentation_agent.py  product_agent.py  task_digest_agent.py
orchestrator/youtube_sync/: sync.py
scripts/: fix_w23_real_stories.py  fix_w23_stories.py  populate_backlog.py
static/dashboard/: app.js  index.html  login.html  style.css
static/youtube/: app.js  index.html  style.css
tests/: conftest.py  test_base_agent.py  test_notion_client.py  test_pipeline_integration.py
tools/: __init__.py  coolify.py  n8n.py  notion.py  notion_cwi.py  project_registry.py  run_tracker.py  slack.py  usage_tracker.py
